[package]
name = "claude-statusline"
version = "0.1.0"
edition = "2024"
description = "A fast, custom statusline for Claude Code"

[dev-dependencies]
tempfile = "3"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
colored = "3"
git2 = { version = "0.20", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
